--- a/libpi/Makefile
+++ b/libpi/Makefile
@@ -19,6 +19,7 @@ SRC = 	cs140e-printf.c  	\
 	cs140e-mem-barrier.s  	\
 	cs140e-stdlib.c		\
 	cs140e-cstart.c		\
+	cs140e-rand.c		\
 	my-gpio.c		\
 	cs140e-put-get.s
 
