--- a/libpi/Makefile
+++ b/libpi/Makefile
@@ -20,6 +20,7 @@ SRC = 	cs140e-printf.c  	\
 	cs140e-stdlib.c		\
 	cs140e-cstart.c		\
 	cs140e-rand.c		\
+	cs140e-kmalloc.c		\
 	my-gpio.c		\
 	cs140e-put-get.s
 
