--- a/labs/lab8-sonar-int/Makefile
+++ b/labs/lab8-sonar-int/Makefile
@@ -4,7 +4,9 @@ all: build
 
 build:
 	make -C sonar-hc-sr04
+	make -C sonar-int
 
 clean:
-	rm -f *~
+	rm -f *~ *.bak
 	make -C sonar-hc-sr04 clean
+	make -C sonar-int clean
