--- a/labs/lab11-fuse-fs/part0-hello/Makefile
+++ b/labs/lab11-fuse-fs/part0-hello/Makefile
@@ -20,6 +20,7 @@ run:
 	cat $(WHERE)/hello
 
 mount: 
+	mkdir -p $(WHERE)
 	./$(NAME) -f -d -s $(WHERE)
 
 unmount:
@@ -52,4 +53,4 @@ ctags:
 	ctags *.[ch]
 # remove compilation products
 clean:
-	rm -f $(NAME) *.o *.d Makefile.bak *~ *.bin tags
+	rm -f $(NAME) *.o *.d Makefile.bak *~ *.bin tags 
