--- a/labs/lab11-fuse-fs/part0-hello/Makefile
+++ b/labs/lab11-fuse-fs/part0-hello/Makefile
@@ -11,8 +11,13 @@ FUSE_CMD = ./$(NAME) -f -d -s $(WHERE)
 CC = gcc
 CFLAGS = -O -Wall -g -std=gnu99 -D_FILE_OFFSET_BITS=64   -Wno-unused-function     `pkg-config fuse --cflags --libs`
 
-all: $(NAME) 
+all: check_os $(NAME) 
 
+check_os:
+UNAME_S := $(shell uname -s)
+ifeq ($(UNAME_S),Linux)
+        LINUX_LIBS=-lfuse
+endif
 
 run:
 	cat $(WHERE)/hello
@@ -26,7 +31,6 @@ mount:
 unmount:
 	fusermount -uz $(WHERE)
 
-# LINUX_LIBS=-lfuse
 $(NAME):  $(OBJS) 
 	$(CC) $(CFLAGS) $^ `pkg-config fuse --cflags --libs`  -o $@ -lm  $(LINUX_LIBS)
 
