--- a/labs/lab11-fuse-fs/part3-final/Makefile.use
+++ b/labs/lab11-fuse-fs/part3-final/Makefile.use
@@ -6,7 +6,15 @@ WHERE=./fake-pi
 OBJS = $(NAME).o  pi-fs-support.o ../part2-redirection/echo-until.o ../part2-redirection/redirect.o
 
 CC = gcc
-CFLAGS = -O -Wall -g -std=gnu99 -D_FILE_OFFSET_BITS=64   -Wno-unused-function -Werror -I../part2-redirection -DPART3
+CFLAGS = -O -Wall -g -std=gnu99 -D_FILE_OFFSET_BITS=64   -Wno-unused-function -Werror -I../part2-redirection -DPART3    `pkg-config fuse --cflags --libs`
+
+check_os:
+UNAME_S := $(shell uname -s)
+ifeq ($(UNAME_S),Linux)
+        LINUX_LIBS=-lfuse
+endif
+
+
 
 all: $(NAME) # test-redirect fuse-redirect # run
 
@@ -36,8 +44,7 @@ test:
 	echo 1 > $(WHERE)/reboot.cmd
 
 $(NAME):  $(OBJS) 
-	$(CC) $(CFLAGS) $^  -o $@ -lm -lfuse
-    
+	$(CC) $(CFLAGS) $^   `pkg-config fuse --cflags --libs` -o $@ -lm $(LINUX_LIB)
 
 # pull in dependency info for *existing* .o files
 -include $(OBJS:.o=.d)
