--- a/labs/lab11-fuse-fs/part3-final/Makefile.use
+++ b/labs/lab11-fuse-fs/part3-final/Makefile.use
@@ -11,8 +11,12 @@ CFLAGS = -O -Wall -g -std=gnu99 -D_FILE_OFFSET_BITS=64   -Wno-unused-function -W
 check_os:
 UNAME_S := $(shell uname -s)
 ifeq ($(UNAME_S),Linux)
-        LINUX_LIBS=-lfuse
+    LINUX_LIBS=-lfuse
+    FUSE_UNMOUNT=fusermount -uz
+else
+    FUSE_UNMOUNT=umount
 endif
+
 
 
 
@@ -23,7 +27,7 @@ mount:
 	./$(NAME) -f -d -s $(WHERE)
 
 unmount:
-	fusermount -uz $(WHERE)
+	$(FUSE_UNMOUNT) $(WHERE)
 
 fuse.run: 
 	my-install -exec $(FUSE_CMD) -pi $(UNIX_SIDE_SHELL) $(PI_SIDE_SHELL)
