--- a/labs/lab11-fuse-fs/part3-final/Makefile.use
+++ b/labs/lab11-fuse-fs/part3-final/Makefile.use
@@ -11,7 +11,7 @@ UNIX_SIDE_SHELL = ../../lab10-shell/shell-unix-side/pi-shell
 FUSE_CMD = ./$(NAME) -f -d -s $(WHERE)
 
 CC = gcc
-CFLAGS = -O -Wall -g -std=gnu99 -D_FILE_OFFSET_BITS=64   -Wno-unused-function -Werror -I../part2-redirection -DPART3    `pkg-config fuse --cflags --libs`
+CFLAGS = -O -Wall -g -std=gnu99 -D_FILE_OFFSET_BITS=64   -Wno-unused-function  -I../part2-redirection -DPART3    `pkg-config fuse --cflags --libs`
 
 all: $(NAME) # test-redirect fuse-redirect # run
 
